--- a/src/components/Cats/style.css
+++ b/src/components/Cats/style.css
@@ -1,3 +1,7 @@
+.cats {
+  height: 140px;
+}
+
 .cat {
   position: absolute;
   top: 50%;
@@ -53,6 +57,62 @@
   animation: fadein 2s;
   animation-delay: 2s;
   animation-fill-mode: forwards;
+}
+
+.slide-item {
+  text-align: center;
+}
+
+.slide-item .paper {
+  margin: 0 auto;
+  color: #fff;
+  font-size: 1.5em;
+  padding: 5px;
+  width: 90%;
+}
+
+.slide-item .paper.red {
+  background: #ff3d4e88;
+}
+
+.slide-item .paper.green {
+  background: #57d84388;
+}
+
+.slide-item .paper.orange {
+  background: #ff9a0088;
+}
+
+.meow {
+  margin-top: 20px !important;
+}
+
+.quiz-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.quiz {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.question {
+  width: 90%;
+  text-align: center;
+  font-size: 1.5em;
+  padding: 10px;
+}
+
+.question .answer {
+  margin-top: 20px;
+}
+
+.question .answer .check {
+  margin-top: 10px;
 }
 
 @keyframes fadein {
